tests/paczka1/fuzzy1/89348127.err
Error in line 1: S538 A761 78,4
Error in line 2: iUPlMjp9h A761 62,0
Error in line 4: S538 S538 82,4
Error in line 8: S538 A358 36,0
Error in line 10: iUPlMjp9h S671 -1,9
Error in line 3: Who A761 98,1
Error in line 15: Who A358 66,6
Error in line 16: S538 A761 288,0
Error in line 20: ma0mi A358 38,4
Error in line 36: S53T A35T T,9
Error in line 37: iUPlMjp9h S671 68,2
